--- a/src/pages/sequences.html
+++ b/src/pages/sequences.html
@@ -7,7 +7,9 @@
 	</div></-->
 
 <div class="vf-content">
+<a href="./arboviruses.html">
 <img src="./images/CV19DP_banner subpage.jpg" style="width:100%">
+
 	<br>
 	<br>
 	<br>
