--- a/src/pages/sequences.html
+++ b/src/pages/sequences.html
@@ -8,16 +8,16 @@
 
 <div class="vf-content">
 <a href="./arboviruses.html">
-<img src="./images/CV19DP_banner subpage.jpg" style="width:100%">
+<img src="./images/CV19DP_banner subpage.jpg" style="width:100%"></a>
 
 	<br>
 	<br>
 	<br>
-	<h3>Genomic sequences of Usutu viruses (USUV) obtained from: free ranging dead birds, free ranging live birds and dead captive birds in the time period 2016-2022</h3>
-	<p>Information on date of death and sampling, location, birds species and molecular testing results for Usutu virus (USUV).</p>
+	<h3>Introduction sequences</h3>
+	<p>Below is a list of Genomic sequences of Usutu virus (USUV) and Global West Nile virus (WNV). The genomic sequences of Usutu virus (USUV) are obtained from: free ranging dead birds, free ranging live birds and dead captive birds in the time period 2016-2022. The Genomic sequences of Global West Nile virus (WNV) are obtained from Mosquitos and chicken feces.</p>
 
 	<!-- empty <p>At auctor urna nunc id cursus metus. Cursus vitae congue mauris rhoncus aenean. Condimentum vitae sapien pellentesque habitant. Rhoncus dolor purus non enim praesent elementum facilisis. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Cursus euismod quis viverra nibh cras pulvinar. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Augue lacus viverra vitae congue eu. Pellentesque dignissim enim sit amet venenatis urna. Purus faucibus ornare suspendisse sed nisi lacus. Mauris a diam maecenas sed enim ut sem.</p>-->
-<br>
+<!--<br>
 	<h4>Available Data</h4>
 	
 	<h4><a href="https://www.ebi.ac.uk/ena/browser/view/MN122145-MN122256">Genomic sequences of Usutu viruses (USUV) obtained from free ranging dead birds (112 records)</a></h4>
@@ -31,8 +31,87 @@
 	<h4><a href="https://www.ebi.ac.uk/ena/browser/view/OR573992-OR573993">https://www.ebi.ac.uk/ena/browser/view/OR573992-OR573993</a></h4>
 	<h4><a href="https://www.ebi.ac.uk/ena/browser/view/MK796168-MK796169">https://www.ebi.ac.uk/ena/browser/view/MK796168-MK796169</a></h4>
 	<br>
+	<br>-->
+	<br>
+	<h4>Available Data - Genomic sequences of Usutu viruses (USUV)</h4>
+
+<table border="1">
+  <thead>
+    <tr>
+      <th>Source</th>
+      <th>Records</th>
+      <th>Links</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Genomic sequences of Usutu viruses (USUV) obtained from free ranging dead birds</td>
+      <td>112 records</td>
+      <td><a href="https://www.ebi.ac.uk/ena/browser/view/MN122145-MN122256">Link to Records</a></td>
+    </tr>
+    <tr>
+      <td>Genomic sequences of Usutu viruses (USUV) obtained from free ranging live birds</td>
+      <td>3 records</td>
+      <td>
+        <ul>
+          <li><a href="https://www.ebi.ac.uk/ena/browser/view/OP921076">OP921076</a></li>
+          <li><a href="https://www.ebi.ac.uk/ena/browser/view/OP921083">OP921083</a></li>
+          <li><a href="https://www.ebi.ac.uk/ena/browser/view/OP921078">OP921078</a></li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td>Genomic sequences of Usutu viruses (USUV) obtained from dead captive birds</td>
+      <td>4 records</td>
+      <td>
+        <ul>
+          <li><a href="https://www.ebi.ac.uk/ena/browser/view/OR573992-OR573993">OR573992-OR573993&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+          <li><a href="https://www.ebi.ac.uk/ena/browser/view/MK796168-MK796169">MK796168-MK796169</a></li>
+        </ul>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
 	<br>
 	<br>
+
+<h4>Available Data - Global West Nile virus (WNV)</h4>
+
+<table border="1">
+  <thead>
+    <tr>
+      <th>Source</th>
+      <th>Records</th>
+      <th>Links</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Genomic sequences of Global West Nile virus (WNV) obtained from mosquitos</td>
+      <td>8 records&nbsp &nbsp &nbsp</td>
+      <td>
+        <ul>
+          <li><a href="https://www.ebi.ac.uk/ena/browser/view/OP762592.1-OP762597.1">OP762592.1-OP762597.1</a></li>
+		  <li><a href="https://www.ebi.ac.uk/ena/browser/view/MW036633.1,MW036634.1">MW036633.1, MW036634.1</a></li>
+        </ul>
+      </td>
+    </tr>
+	<tr>
+      <td>Genomic sequences of Global West Nile virus (WNV) obtained from chicken feces&nbsp;&nbsp;&nbsp;</td>
+      <td>1 record&nbsp &nbsp &nbsp</td>
+      <td>
+        <ul>
+
+		  <li><a href="https://www.ebi.ac.uk/ena/browser/view/ON755223.1">ON755223.1</a></li>
+        </ul>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<br>
+<br>
+
 	<!-- <ul>
 		<li>Et tortor consequat id porta</li>
 		<li>At ultrices mi tempus imperdiet nulla</li>
