--- a/src/pages/sequences.html
+++ b/src/pages/sequences.html
@@ -14,7 +14,7 @@
 	<br>
 	<br>
 	<h3>Introduction sequences</h3>
-	<p>Below is a list of Genomic sequences of Usutu virus (USUV) and Global West Nile virus (WNV). The genomic sequences of Usutu virus (USUV) are obtained from: free ranging dead birds, free ranging live birds and dead captive birds in the time period 2016-2022. The Genomic sequences of Global West Nile virus (WNV) are obtained from Mosquitos and chicken feces.</p>
+	<p>Below is a list of genomic sequences of Usutu virus (USUV) and Global West Nile virus (WNV) from samples collected in the Netherlands. The genomic sequences of Usutu virus (USUV) were obtained from: free ranging dead birds, free ranging live birds and dead captive birds in the time period 2016-2022. The genomic sequences of Global West Nile virus (WNV) were obtained from: Culex mosquitoes, throat and cloacal swabs of various birds and chicken faeces in 2020.</p>
 
 	<!-- empty <p>At auctor urna nunc id cursus metus. Cursus vitae congue mauris rhoncus aenean. Condimentum vitae sapien pellentesque habitant. Rhoncus dolor purus non enim praesent elementum facilisis. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Cursus euismod quis viverra nibh cras pulvinar. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Augue lacus viverra vitae congue eu. Pellentesque dignissim enim sit amet venenatis urna. Purus faucibus ornare suspendisse sed nisi lacus. Mauris a diam maecenas sed enim ut sem.</p>-->
 <!--<br>
@@ -92,13 +92,13 @@
       <td>8 records&nbsp &nbsp &nbsp</td>
       <td>
         <ul>
-          <li><a href="https://www.ebi.ac.uk/ena/browser/view/OP762592.1-OP762597.1">OP762592.1-OP762597.1</a></li>
-		  <li><a href="https://www.ebi.ac.uk/ena/browser/view/MW036633.1,MW036634.1">MW036633.1, MW036634.1</a></li>
+          <li><a href="https://www.ebi.ac.uk/ena/browser/view/OP762592.1-OP762597.1">Culex mosquitoes OP762592.1-OP762597.1</a></li>
+		  <li><a href="https://www.ebi.ac.uk/ena/browser/view/MW036633.1,MW036634.1">Mosquito pool MW036633.1, MW036634.1</a></li>
         </ul>
       </td>
     </tr>
 	<tr>
-      <td>Genomic sequences of Global West Nile virus (WNV) obtained from chicken feces&nbsp;&nbsp;&nbsp;</td>
+      <td>Genomic sequences of Global West Nile virus (WNV) obtained from gallus gallus domesticus (chicken) faeces.&nbsp;&nbsp;&nbsp;</td>
       <td>1 record&nbsp &nbsp &nbsp</td>
       <td>
         <ul>
